--- a/ExtraUIScreens/ExtraUIScreens.csproj
+++ b/ExtraUIScreens/ExtraUIScreens.csproj
@@ -10,13 +10,6 @@
     <!--The folder where Cities2.exe is located. Set it only if the game is not installed in the default location, otherwise keep it empty-->
     <CustomInstallationPath></CustomInstallationPath>
 
-    <!--Path to the text file where PDX account data is stored which is required to publish the mod-->
-    <!--Keep it outside of project in order to not commit it or share accidentally-->
-    <!--The file should contain 2 lines:-->
-    <!--Your.PDX@Account.login-->
-    <!--Your-PDX-Account-Pa$$word-->
-    <PDXAccountDataPath>$(K45_CS2_ALLROOT)\pdx_account.txt</PDXAccountDataPath>
-
     <!--The file where mod information which is required for publishing mod on PDX mods are stored-->
     <PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
   </PropertyGroup>
@@ -25,11 +18,12 @@
   <Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
   <Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets" />
   <Target Name="RunModPostProcessor" AfterTargets="AfterBuild" Condition="false" />
+  <Import Project="$(K45_CS2_ALLROOT)\_Shared\belzont.targets" />
   
   <!--Mod data-->
   <PropertyGroup>
     <ModId>74151</ModId>
-    <Version>0.1.1.1</Version>
+    <Version>0.1.1.2</Version>
     <GameVersion>1.1.*</GameVersion>
     <ThumbnailPath>Properties/Thumbnail.png</ThumbnailPath>
     <DisplayName>Extra UI Screens</DisplayName>
