--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "ExtraUIScreens/BelzontCommons"]
 	path = ExtraUIScreens/BelzontCommons
-	url = ../BelzontCommons
+	url = https://github.com/klyte45/CS2-BelzontCommons
 [submodule "_Frontends/UI/_replacements"]
 	path = _Frontends/UI/_replacements
-	url = ../Cs2UIUtility
+	url = https://github.com/klyte45/CS2-EuisToolkit
 [submodule "_Build"]
 	path = _Build
-	url = ../_Shared/Public
+	url = https://github.com/klyte45/CS2-BuildFiles
