--- a/ExtraUIScreens/ExtraUIScreens.csproj
+++ b/ExtraUIScreens/ExtraUIScreens.csproj
@@ -7,9 +7,6 @@
     <LangVersion>10.0</LangVersion>
     <DebugType Condition="'$(Configuration)'=='Release'">None</DebugType>
     <DebugSymbols Condition="'$(Configuration)'=='Release'">False</DebugSymbols>
-    <!--The folder where Cities2.exe is located. Set it only if the game is not installed in the default location, otherwise keep it empty-->
-    <CustomInstallationPath></CustomInstallationPath>
-
     <!--The file where mod information which is required for publishing mod on PDX mods are stored-->
     <PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
   </PropertyGroup>
@@ -25,7 +22,7 @@
   <!--Mod data-->
   <PropertyGroup>
     <ModId>74151</ModId>
-    <Version>0.1.2.4</Version>
+    <Version>0.1.2.5</Version>
     <GameVersion>1.1.*</GameVersion>
     <ThumbnailPath>Properties/Thumbnail.png</ThumbnailPath>
     <DisplayName>Extra UI Screens</DisplayName>
@@ -41,15 +38,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AssemblyAttribute Include="Belzont.AssemblyUtility.KlyteModDescriptionAttribute">
-      <_Parameter1>$(ModId)</_Parameter1>
-      <_Parameter2>$(DisplayName)</_Parameter2>
-      <_Parameter3>$(ShortDescription)</_Parameter3>
-      <_Parameter4>$(ForumLink)</_Parameter4>
-    </AssemblyAttribute>
-  </ItemGroup>
-
-  <ItemGroup>
+    <Reference Include="UnityEngine.ImageConversionModule.dll">
+      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\UnityEngine.ImageConversionModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Game">
       <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Game.dll</HintPath>
       <Private>false</Private>
@@ -132,6 +124,10 @@
     </Reference>
     <Reference Include="UnityEngine.ScreenCaptureModule">
       <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Unity.InputSystem.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Colossal.PSI.Common">
+      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.PSI.Common.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
